--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             </div>
                             
                             <div class="col-md-3 profile-pic-holder">
-                                <h1>Cliff Odhiambo</h1>
+                                <h1>Cliff Odhiambo O.</h1>
                                 <p>Passionate Web Designer</p>
                             </div>
                             
