Changed image PBS

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                             </div>
                                             
                             <div class="col-md-4">
-                                <a href="https://severine-cottages.com/" target="_blank"><img src="assets/images/severine.png" alt="" /></a>
+                                <a href="https://severine-cottages.com/" target="_blank"><img src="assets/images/severine.png" alt="Severine Cottages" /></a>
                                 <div class="port_caption m-top-20">
                                         <h5><a href="https://severine-cottages.com/" target="_blank">Severine Cottages</a></h5>
                                         <h6>- Wordpress</h6>
