--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                             </div>
                                             
                             <div class="col-md-4">
-                                <a href="http://prefab-building-solutions.com/" target="_blank"><img src="assets/images/prefab-solutions2.jpg" alt="" /></a>
+                                <a href="http://prefab-building-solutions.com/" target="_blank"><img src="assets/images/pbs.png" alt="" /></a>
                                 <div class="port_caption m-top-20">
                                         <h5><a href="http://prefab-building-solutions.com/" target="_blank">Prefab Building Solutions - China</a></h5>
                                         <h6>- Static Website</h6>
